# certMS

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/app/: main.py
api/tests/: test_main.py
app/: main.py
app/api/: __init__.py
app/api/routes/: students.py
app/core/: config.py
app/db/: init_db.py
app/models/: __init__.py  student.py
app/schemas/: student.py
ocr_cli/: main.py
tests/: test_main.py
